--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
     <title>Photogram GUI</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <nav>
+      <li><a href="/users">Users</a></li>
+      <li><a href="/photos">Photos</a></li>
+    </nav>
   </head>
 
   <body>
