--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -1,5 +1,12 @@
 <h1>List of users</h1>
 
+<form action="/add_user" method="post">
+  <label for="username">Username</label>
+  <input id="username" type="text" name="query_username" placeholder="Enter a username...">
+
+  <button>Add user</button>
+</form>
+
 <table border ="1">
 
   <th>
