--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -8,11 +8,11 @@
   <dt>Edit user</dt>
 
   <dd>
-  <form action="/update_user/<%= @the_user.username %>" method="post">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="query_username" placeholder="<%= @the_user.username %>" value="<%= @the_user.username %>">
+  <form action="/update_user/<%= @the_user.username %>">
+    <label for="new_username">Username</label>
+    <input id="new_username" type="text" name="query_username" placeholder="<%= @the_user.username %>" >
 
-  <button>Update user</button>
+    <button>Update user</button>
   </form>
   </dd>
 </dl>
