--- a/app/views/photo_templates/show.html.erb
+++ b/app/views/photo_templates/show.html.erb
@@ -89,24 +89,24 @@
         <%= a_comment.created_at %>
       </td>
     </tr>
-  <% end  %>
+  <% end %>
 
-  </table>
+</table>
+
 <h3>Add a new comment</h3>
 
+    <form action="/add_comment/<%= @the_photo.id %>" method="post">
+      <label for="browser_photo_id">Photo ID</label>
+      <input id="browser_photo_id" type=text placeholder="Enter the photo ID" name="input_photo_id" value="<%= @the_photo.id %>">
 
-<form action="/add_comment" method="post">
-  <label for="browser_photo_id">Photo ID</label>
-  <input id="browser_photo_id" type=text placeholder="Enter the photo ID" name="input_photo_id" value=771>
+      <label for="browser_author_id">Author ID</label>
+      <input id="browser_author_id" type=text placeholder="Enter your author ID" name="input_author_id">
 
-  <label for="browser_author_id">Author ID</label>
-  <input id="browser_author_id" type=text placeholder="Enter your author ID" name="input_author_id">
+      <label for="browser_comment">Comment</label>
+      <textarea id="browser_comment" type=text placeholder="Enter a comment..." name="input_comment"></textarea>
 
-  <label for="browser_comment">Comment</label>
-  <textarea id="browser_comment" type=text placeholder="Enter a comment..." name="input_comment"></textarea>
-
-  <button>Add comment</button>
-</form>
+      <button>Add comment</button>
+    </form>
 
   </body>
 </html>
