--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -10,7 +10,7 @@
   <dd>
   <form action="/update_user/<%= @the_user.username %>">
     <label for="new_username">Username</label>
-    <input id="new_username" type="text" name="query_username" placeholder="<%= @the_user.username %>" >
+    <input id="new_username" type="text" name="query_username" value="<%= @the_user.username %>" placeholder="<%= @the_user.username %>" >
 
     <button>Update user</button>
   </form>
